k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jio20-session
spec:
  selector:
    app: jio20-session
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP
